Minor card spacing and border fixes

--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
 .card {
   display: grid;
   grid-template-rows: 1fr 2fr 1fr;
-  width: clamp(50px, 20vw, 200px);
+  width: clamp(200px, 20vw, 400px);
   box-shadow: 0 10px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
@@ -13,9 +13,8 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
-  /* gap: 2px; */
+  gap: 2vh;
   padding: 2vw;
-  border: solid red;
 }
 
 .cardHeader {
